--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
   <h1>Kim Langston</h1>
   <p>Welcome to my first Github project!</p>
+  <p>Another line of code to test.</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
